2010-05-19 Andrew John Hughes  <ahughes@redhat.com>

	Patch splashscreen to build against libpng 1.4.
	* Makefile.am:
	Bump JDK changeset and SHA256 sum.

2010-01-26 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(stamps/plugin-tests.stamp): Add
	a target for building the plugin tests.
	(plugin-tests): Alias for the above.
	
2010-01-27  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am: Remove quoting from ICEDTEA_NAME ICEDTEA_REV ICEDTEA_PKG.

2010-01-25 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Remove trailing space after IcedTea version
	in plugin version information when package
	version is not set.
	
2010-05-18 Andrew John Hughes  <ahughes@redhat.com>

	* patches/boot/scanner-charsets.patch:
	Patch openjdk-boot not openjdk.

2010-05-17 Andrew John Hughes  <ahughes@redhat.com>

	* patches/boot/icedtea-dbcs.patch,
	* patches/boot/icedtea-sbcs.patch,
	* patches/boot/icedtea-spp.patch:
	Renamed to relate to java.util.Scanner.
	* Makefile.am: Fix paths above and add
	new patch.
	* patches/boot/scanner-charsets.patch:
	New patch to remove Scanner usage in
	charsetmapping tool.
	* patches/boot/scanner-dbcs.patch,
	* patches/boot/scanner-sbcs.patch,
	* patches/boot/scanner-spp.patch:
	Collect together all patches to avoid use
	of java.util.Scanner.

2010-05-17 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(stamps/extract-jaxws.stamp): Use absolute
	path to stamps.

2010-05-17 Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	Remove duplicate IT_XULRUNNER_VERSION macro.

2010-01-22  Deepak Bhole <dbhole@redhat.com>

	* Makefile.am:
	Use MOZILLA_CFLAGS/LIBS rather than
	XULRUNNER.
	* plugin/icedteanp/IcedTeaNPPlugin.cc:
	Use PRInt32 rather than PRInt32_t for port.

2010-01-25 Andrew John Hughes  <ahughes@redhat.com>

	* IcedTeaPlugin.cc:
	Standardise plugin versioning.
	* Makefile.am:
	Set ICEDTEA_NAME and use in place of literal
	"IcedTea7".  Use HAS_PKGVERSION to set ICEDTEA_PKG